# F1-Race-predictor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
f1predictor/: cli.py  config.py  evaluate.py
reports/: factor_loadings.csv  lasso_coefficients.csv  pca_explained_variance.csv  walk_forward_metrics.csv
src/f1predictor/: __init__.py  cli.py  config.py  data.py  features.py  models.py  plots.py
tests/: test_features.py
