[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1predictor"
version = "0.1.0"
description = "Supervised pipeline predicting Formula 1 race winners with walk-forward evaluation across seasons."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "fastf1>=3.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "factor-analyzer>=0.5",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "pyyaml>=6.0",
]

[project.scripts]
f1predict = "f1predictor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
